Updated settings view. Added theme switching.

--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -9,10 +9,11 @@ hr {
 
 .settings_view input {
     display: block;
-    color: var(--light);
+    color: var(--text);
     background: var(--main);
     border: 1px solid var(--border);
     margin-bottom: 10px;
+    width: 350px;
 }
 
 .settings_view .settings_item {
