--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,362 +7,193 @@ html, body {
     height: 100%;
 }
 
-/* @media (prefers-color-scheme: dark) { */
+html, body {
+    background: var(--dark);
+    color: var(--text);
+}
 
-    html, body {
-        background: var(--dark);
-        color: var(--light);
-    }
+#header_menu {
+    display: flex;
+    background: var(--menu);
+    padding: 5px;
+    width: 100%;
+    /* height: 16px; */
+}
 
-    #header_menu {
-        display: flex;
-        background: var(--menu);
-        padding: 5px;
-        width: 100%;
-        /* height: 16px; */
-    }
+#header_menu .slider {
+    height: 12px;
+}
 
-    #header_menu .slider {
-        height: 12px;
-    }
+#header_menu .item {
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
-    #header_menu .item {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
+#header_menu .settings {
+    position: relative;
+    height: 12px;
+}
 
-    #header_menu .settings {
-        position: relative;
-        height: 12px;
-    }
+#header_menu a {
+    color: var(--text);
+    cursor: pointer;
+    text-decoration: none;
+    outline: none;
+}
 
-    #header_menu a {
-        color: var(--light);
-        cursor: pointer;
-        text-decoration: none;
-        outline: none;
-    }
+.header_menu .active .bi {
+    color: var(--white);
+}
 
-    .header_menu .active .bi {
-        color: var(--white);
-    }
+#navigation_menu {
+    display: flex;
+    background: var(--menu);
+    padding: 5px;
+    width: 100%;
+    /* height: 16px; */
+}
 
-    #navigation_menu {
-        display: flex;
-        background: var(--menu);
-        padding: 5px;
-        width: 100%;
-        /* height: 16px; */
-    }
+#navigation_menu input[type=text] {
+    border-radius: 5px;
+    border: none;
+    color: var(--text);
+    background: var(--input);
+    font-size: 12px;
+    height: 18px;
+    width: 100%;
+}
 
-    #navigation_menu input[type=text] {
-        border-radius: 5px;
-        border: none;
-        color: #cfcfcf;
-        background: var(--input);
-        font-size: 12px;
-        height: 18px;
-        width: 100%;
-    }
+#navigation_menu .disk_space {
+    /* border: 1px solid red; */
+    display: flex;
+}
 
-    #navigation_menu .disk_space {
-        /* border: 1px solid red; */
-        display: flex;
-    }
+#navigation_menu .item {
+    padding: 5px;
+    padding-right: 15px;
+    white-space: nowrap;
+}
 
-    #navigation_menu .item {
-        padding: 5px;
-        padding-right: 15px;
-        white-space: nowrap;
-    }
+#navigation_menu .item a {
+    padding: 5px;
+    color: var(--text);
+}
 
-    #navigation_menu .item a {
-        padding: 5px;
-        color: #cfcfcf;
-    }
+#main {
+    position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
+    /* border: 1px solid red; */
+    background: var(--main);
+    border-radius: 5px;
+    /* padding: 10px; */
+    width: 100%;
+    height: 92%;
+    /* flex: 1; */
+}
 
-    #main {
-        position: relative;
-        overflow-y: auto;
-        overflow-x: hidden;
-        /* border: 1px solid red; */
-        background: var(--main);
-        border-radius: 5px;
-        /* padding: 10px; */
-        width: 100%;
-        height: 92%;
-        /* flex: 1; */
-    }
+#main::-webkit-scrollbar {
+    background: var(--lessdark);
+    width: 0px;
+}
 
-    #main::-webkit-scrollbar {
-        background: var(--lessdark);
-        width: 0px;
-    }
+#main::-webkit-scrollbar-track {
+    background: var(--lessdark);
+}
 
-    #main::-webkit-scrollbar-track {
-        background: var(--lessdark);
-    }
+#main a {
+    color: var(--text);
+}
 
-    #main a {
-        color: var(--white);
-    }
+.active {
+    border-radius: 5px;
+    /* width: 100%; */
+    /* background: var(--lessdark) */
+}
 
-    .active {
-        border-radius: 5px;
-        /* width: 100%; */
-        /* background: var(--lessdark) */
-    }
+.menubar .active .bi {
+    color: var(--orange);
+}
 
-    .menubar .active .bi {
-        color: var(--orange);
-    }
+.msg {
+    color: var(--orange);
+    background-color: var(--msg);
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 100;
+}
 
-    .msg {
-        color: var(--orange);
-        background-color: var(--msg);
-        border-radius: 5px;
-        padding: 10px;
-        z-index: 100;
-    }
+#progress {
+    color: #cfcfcf;
+    background-color: rgb(0 0 0 / 0.8);
+    border-radius: 5px;
+    padding: 5px;
+    width: 450px;
+    z-index: 100;
+    white-space: nowrap;
+}
 
-    #progress {
-        color: #cfcfcf;
-        background-color: rgb(0 0 0 / 0.8);
-        border-radius: 5px;
-        padding: 5px;
-        width: 450px;
-        z-index: 100;
-        white-space: nowrap;
-    }
+#progress_bar {
+    height: 12px;
+}
 
-    #progress_bar {
-        height: 12px;
-    }
+#progress_msg {
+    color: #cfcfcf;
+}
 
-    #progress_msg {
-        color: #cfcfcf;
-    }
+#quicksearch {
+    border-radius: 5px;
+    border: 1px solid var(--moredark);
+    background: var(--dark);
+    padding: 5px;
+    height: 14px;
+    width: 350px;
+    z-index: 100;
+    outline: none;
+}
 
-    #quicksearch {
-        border-radius: 5px;
-        border: 1px solid var(--moredark);
-        background: var(--dark);
-        padding: 5px;
-        height: 14px;
-        width: 350px;
-        z-index: 100;
-        outline: none;
-    }
+#txt_quicksearch {
+    border-radius: 5px;
+    width: 100%;
+    font-size: 12px;
+}
 
-    #txt_quicksearch {
-        border-radius: 5px;
-        width: 100%;
-        font-size: 12px;
-    }
+/* Dialogs */
+.connect {
+    background: var(--main);
+    color: var(--text);
+    padding: 25px;
+}
 
-    /* Dialogs */
-    .connect {
-        background: var(--main);
-        color: var(--light);
-        padding: 25px;
-    }
+.connect > .label {
+    display:block;
+    margin-bottom: 2px;
+}
 
-    .connect > .label {
-        display:block;
-        margin-bottom: 2px;
-    }
+.connect > .input {
+    border: none;
+    height: 23px;
+    background: var(--input);
+    color: var(--white);
+    display: block;
+    margin-bottom: 15px;
+    width: 350px;
+}
 
-    .connect > .input {
-        border: none;
-        height: 23px;
-        background: var(--input);
-        color: var(--white);
-        display: block;
-        margin-bottom: 15px;
-        width: 350px;
-    }
+.connect > .msg {
+    color: #ff0000;
+    padding: 5px;
+}
 
-    .connect > .msg {
-        color: #ff0000;
-        padding: 5px;
-    }
+#confirm {
+    padding: 40px;
+}
 
-    #confirm {
-        padding: 40px;
-    }
+#confirm .header {
+    font-weight: bold;
+}
 
-    #confirm .header {
-        font-weight: bold;
-    }
 
-/* } */
-
-/*
-@media (prefers-color-scheme: light) {
-
-    html, body {
-        background: var(--dark);
-        color: var(--light);
-    }
-
-    #header_menu {
-        display: flex;
-        background: var(--lightest);
-        columns: var(--dark);
-        padding: 5px;
-        width: 100%;
-    }
-
-    #header_menu .item {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
-    #header_menu .settings {
-        position: relative;
-        height: 12px;
-    }
-
-    #header_menu a {
-        color: var(--dark);
-        cursor: pointer;
-        text-decoration: none;
-        outline: none;
-    }
-
-    #navigation_menu {
-        display: flex;
-        background: var(--lightest);
-        padding: 5px;
-        width: 100%;
-    }
-
-    #navigation_menu input[type=text] {
-        border-radius: 5px;
-        border: none;
-        color: var(--dark);
-        background: var(--white);
-        font-size: 12px;
-        height: 18px;
-        width: 98%;
-    }
-
-    #navigation_menu .item {
-        padding: 5px;
-    }
-
-    #navigation_menu .item a {
-        padding: 5px;
-        color: var(--dark);
-    }
-
-    .container {
-        position: relative;
-        display: flex;
-        width: 100%;
-        height: 92%;
-    }
-
-    #main {
-        position: absolute;
-        overflow: auto;
-        overflow-x: hidden;
-        background: var(--white);
-        border-radius: 5px;
-        padding: 10px;
-        width: 100%;
-    }
-
-    .card .content {
-        color:var(--dark);
-    }
-
-    .card .content a {
-        color:var(--dark);
-    }
-
-    .active {
-        border-radius: 5px;
-        background: var(--lighter)
-    }
-
-    #msg {
-        color: #cfcfcf;
-        background-color: var(--dark);
-        border-radius: 5px;
-        padding: 10px;
-        z-index: 100;
-    }
-
-    #progress {
-        color: #cfcfcf;
-        background-color: rgb(0 0 0 / 0.8);
-        border-radius: 5px;
-        padding: 5px;
-        width: 350px;
-        z-index: 100;
-    }
-
-    #progress_bar {
-        height: 12px;
-    }
-
-    #progress_msg {
-        color: #cfcfcf;
-    }
-
-    #quicksearch {
-        border-radius: 5px;
-        border: 1px solid var(--moredark);
-        background: var(--dark);
-        padding: 5px;
-        height: 14px;
-        width: 350px;
-        z-index: 100;
-        outline: none;
-    }
-
-    #txt_quicksearch {
-        border-radius: 5px;
-        width: 100%;
-        font-size: 12px;
-    }
-
-    .connect {
-        background: var(--dark);
-        color: var(--light);
-        padding: 25px;
-    }
-
-    .connect > .label {
-        display:block;
-        margin-bottom: 2px;
-    }
-
-    .connect > .input {
-        border: none;
-        height: 23px;
-        background: var(--lessdark);
-        color: var(--white);
-        display: block;
-        margin-bottom: 15px;
-        width: 350px;
-    }
-
-    .connect > .msg {
-        color: #ff0000;
-        padding: 5px;
-    }
-
-    #confirm {
-        padding: 40px;
-    }
-
-    #confirm .header {
-        font-weight: bold;
-    }
-
-} */
 
 .menus {
     position: relative;
@@ -446,7 +277,7 @@ html, body {
 .tab {
     border-radius: 5px 5px 0px 0px;
     background: var(--main);
-    color: var(--light);
+    color: var(--text);
     border: 1px solid var(--border);
     border-left: 1px solid transparent;
     display: inline-block;
@@ -467,9 +298,10 @@ html, body {
 }
 
 .tab.active-tab {
-    color: var(--white);
+    color: var(--text);
     border-top: 2px solid var(--blue);
     border-bottom: none;
+    font-weight: bold;
 }
 
 .tab_container {
@@ -482,7 +314,7 @@ html, body {
 }
 
 #chart {
-    color: var(--light);
+    color: var(--text);
     width: '100px';
     height: '100px';
 }
@@ -529,7 +361,7 @@ progress::-webkit-progress-bar {
     border-radius: 5px;
     border:none;
     background: transparent;
-    color: #cfcfcf;
+    color: var(--text);
     opacity: 0;
     transition: opacity 0.5s;
 }
@@ -605,7 +437,7 @@ progress::-webkit-progress-bar {
 .card a {
     display: block;
     word-break: break-all;
-    color: white;
+    color: var(--text);
 }
 .card a:hover {
     cursor: pointer;
@@ -924,7 +756,7 @@ input[type=text]:focus {
     }
 }
 
-/* Laptop Desctop */
+/* Laptop Desktop */
 @media only screen and (min-width: 1024px) {
     .grid {
         display: grid;
@@ -942,40 +774,71 @@ input[type=text]:focus {
     }
 }
 
-:root {
-    --menu: #303134;
-    --sidebar: #262626;
-    --input: #484848;
-    --main: #2c2c2c;
-    --minibar: #222222;
-    --border: #484848;
-    --msg: #222222;
-    --dialog: #262626;
+@media (prefers-color-scheme: dark) {
+    :root {
+        --menu: #303134;
+        --sidebar: #262626;
+        --input: #484848;
+        --main: #2c2c2c;
+        --minibar: #222222;
+        --border: #484848;
+        --msg: #222222;
+        --dialog: #262626;
+        --text: #C0C0C0;
 
-    /* --dark: #252525; */
-    /* --moredark: #222222; */
-    /* --lessdark: #2f2f2f; */
-    --black: #000000;
-    --white: #FFFFFF;
-    --warning: #960000;
-    --green: #008000;
-    --blue: #233654;
-    --lightblue: #506585;
-    --yellow: #FFFF00;
-    --orange: #FFA500;
-    --link: #4183c4;
-    --highlight: #364864;
-    --highlight-select: #364864;
-    /* --highlight-select: #334c74; */
-    /* --highlight: rgba(0, 128, 255, 0.213); */
-    /* --highlight: linear-gradient(to right, #505050, #252525); */
+        /* --dark: #252525; */
+        /* --moredark: #222222; */
+        /* --lessdark: #2f2f2f; */
+        --black: #000000;
+        --white: #FFFFFF;
+        --warning: #960000;
+        --green: #008000;
+        --blue: #233654;
+        --lightblue: #506585;
+        --yellow: #FFFF00;
+        --orange: #FFA500;
+        --link: #4183c4;
+        --highlight: #364864;
+        --highlight-select: #364864;
+        /* --highlight-select: #334c74; */
+        /* --highlight: rgba(0, 128, 255, 0.213); */
+        /* --highlight: linear-gradient(to right, #505050, #252525); */
 
-    --grey: #505050;
+        --grey: #505050;
 
-    --light: #C0C0C0;
-    --lighter: #cfcfcf;
-    --lightest: #cacaca;
-
+        --light: #C0C0C0;
+        --lighter: #cfcfcf;
+        --lightest: #cacaca;
+    }
 }
 
+@media (prefers-color-scheme: light) {
+    :root {
+        --menu: #f7f7f7;
+        --sidebar: #f7f7f7;
+        --input: #cfcfcf;
+        --main: #cdcdcd;
+        --minibar: #cfcfcf;
+        --border: #f7f7f7;
+        --msg: #222222;
+        --dialog: #262626;
+        --text: #252525;
 
+        --black: #000000;
+        --white: #FFFFFF;
+        --warning: #960000;
+        --green: #008000;
+        --blue: #233654;
+        --lightblue: #506585;
+        --yellow: #FFFF00;
+        --orange: #FFA500;
+        --link: #4183c4;
+        --highlight: #f7f7f7;
+        --highlight-select: #f7f7f7;
+
+        --grey: #505050;
+        --light: #2c2c2c;
+        --lighter: #cfcfcf;
+        --lightest: #cacaca;
+    }
+}
