--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,275 +1,192 @@
 
-/* @media (prefers-color-scheme: dark) { */
+.sidebar {
+    position: relative;
+    box-sizing: border-box;
+    /* border:1px solid red; */
+    background-color: var(--sidebar);
+    color: var(--text);
+    padding-left: 5px;
+    padding-right: 5px;
+    height: 100%;
+    width: 300px;
 
-    .sidebar {
-        position: relative;
-        box-sizing: border-box;
-        /* border:1px solid red; */
-        background-color: var(--sidebar);
-        color: var(--text);
-        padding-left: 5px;
-        padding-right: 5px;
-        height: 100%;
-        width: 300px;
+}
 
-    }
+.sidebar .header {
+    color: var(--lightblue);
+    font-weight: bold;
+    font-size: 12px;
+}
 
-    .sidebar .header {
-        color: var(--lightblue);
-        font-weight: bold;
-        font-size: 12px;
-    }
+.sidebar .item {
+    white-space: nowrap;
+    color: var(--text);
+    padding: 5px;
+    cursor: pointer;
+}
 
-    .sidebar .item {
-        white-space: nowrap;
-        color: var(--text);
-        padding: 5px;
-        cursor: pointer;
-    }
+.sidebar .item:hover {
+    background: var(--highlight);
+    border-radius: 5px;;
+    text-decoration: none;
+}
 
-    .sidebar .item:hover {
-        background: var(--highlight);
-        border-radius: 5px;;
-        text-decoration: none;
-    }
+.sidebar a {
+    color: var(--text);
+    text-decoration: none;
+}
 
-    .sidebar a {
-        color: var(--text);
-        text-decoration: none;
-    }
+.sidebar a:hover {
+    text-decoration: none;
+}
 
-    .sidebar a:hover {
-        text-decoration: none;
-    }
+.sb_view {
+    /* background: #3794ff; */
+    margin-top: 5px;
+    height: 100%;
+}
 
-    .sb_view {
-        /* background: #3794ff; */
-        margin-top: 5px;
-        height: 100%;
-    }
+.sb_view .item.active {
+    background: var(--highlight)
+}
 
-    .sb_view .item.active {
-        background: var(--highlight)
-    }
+.properties_view {
+    overflow: auto;
+    height: 100%;
+    /* word-wrap: break-word; */
+    /* white-space: break-all; */
+    width: 100%;
+}
 
-    .properties_view {
-        overflow: auto;
-        height: 100%;
-        /* word-wrap: break-word; */
-        /* white-space: break-all; */
-        width: 100%;
-    }
+.properties {
+    width: 100%;
+    border-radius: 5px;
+    background: var(--main);
+    border-bottom: 1px solid var(--border);
+    margin-bottom: 10px;
+    padding: 5px;
+    box-sizing: border-box;
+    /* grid-template-columns: repeat(2, 1fr); */
+}
 
-    .properties {
-        width: 100%;
-        border-radius: 5px;
-        /* background: var(--main); */
-        /* border-bottom: 1px solid var(--main); */
-        margin-bottom: 10px;
-        padding: 5px;
-        box-sizing: border-box;
-        /* grid-template-columns: repeat(2, 1fr); */
-    }
+.properties .content {
+    display: grid;
+    grid-template-columns: 75px 1fr;
+}
 
-    .properties .content {
-        display: grid;
-        grid-template-columns: 75px 1fr;
-    }
+.properties .item {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
-    .properties .item {
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+.properties .item:first-child {
+    /* width: 20px; */
+}
 
-    .properties .item:first-child {
-        /* width: 20px; */
-    }
+.scrollbar {
+    width: 0.5px;
+    background: var(--lessdark);
+}
 
-    .scrollbar {
-        width: 0.5px;
-        background: var(--lessdark);
-    }
+.draghandle {
+    overflow: hidden;
+    z-index: 100;
+    width: 4px;
+    height:100%;
+    /* right: 0;
+    bottom: 0; */
+    cursor: col-resize;
+    float: right;
+}
 
-    .draghandle {
-        overflow: hidden;
-        z-index: 100;
-        width: 4px;
-        height:100%;
-        /* right: 0;
-        bottom: 0; */
-        cursor: col-resize;
-        float: right;
-    }
+.draghandle:hover {
+    background-color: #3794ff !important;
+}
 
-    .draghandle:hover {
-        background-color: #3794ff !important;
-    }
+.minibar {
+    margin-left: -4px;
+    padding: 8px;
+    width: 24px;
+    float:left;
+    background-color: var(--minibar);
+    color: var(--text);
+    border-right: 1px solid var(--border);
+    height:100%
+}
 
-    .minibar {
-        margin-left: -4px;
-        padding: 8px;
-        width: 24px;
-        float:left;
-        background-color: var(--minibar);
-        color: var(--text);
-        border-right: 1px solid var(--border);
-        height:100%
-    }
+#minibar .bi {
+    font-size: 18px;
+    padding: 5px;
+}
 
-    #minibar .bi {
-        font-size: 18px;
-        padding: 5px;
-    }
+#minibar .item.active {
+    background: none;
+    font-weight: bolder;
+    color: var(--white);
+}
 
-    #minibar .item.active {
-        background: none;
-        font-weight: bolder;
-        color: var(--white);
-    }
+#minibar .item  {
+    color: var(--grey);
+    cursor: pointer;
+    padding-bottom: 15px;
+}
 
-    #minibar .item  {
-        color: var(--grey);
-        cursor: pointer;
-        padding-bottom: 15px;
-    }
+.search_view {
+    height: 100%;
+}
 
-    .search_view {
-        height: 100%;
-    }
+.search_view .input {
+    background: var(--input);
+    color: var(--text);
+    height: 16px;
+    margin-top: 5px;
+    border:1px solid var(--border);
+    /* border: 1px solid var(--light) */
+}
 
-    .search_view .input {
-        background: var(--input);
-        color: var(--text);
-        height: 16px;
-        margin-top: 5px;
-        border:1px solid var(--border);
-        /* border: 1px solid var(--light) */
-    }
+.search_results {
+    margin-top: 10px;
+    overflow: auto;
+    height: 100%;
+}
 
-    .search_results {
-        margin-top: 10px;
-        overflow: auto;
-        height: 100%;
-    }
+/* Styles for the scrollbar track */
+::-webkit-scrollbar {
+    width: 10px;
+}
 
-    /* Styles for the scrollbar track */
-    ::-webkit-scrollbar {
-        width: 10px;
-    }
+::-webkit-scrollbar-track {
+    border-left: 1px solid var(--lightblue);
+    background: rgba(25, 25, 25, 0.2);
+}
 
-    ::-webkit-scrollbar-track {
-        border-left: 1px solid var(--lightblue);
-        background: rgba(25, 25, 25, 0.2);
-    }
+/* Styles for the scrollbar thumb */
+::-webkit-scrollbar-thumb {
+    background: rgba(25, 25, 25, 0.2);
+    border-radius: 5px;
+}
 
-    /* Styles for the scrollbar thumb */
-    ::-webkit-scrollbar-thumb {
-        background: rgba(25, 25, 25, 0.2);
-        border-radius: 5px;
-    }
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(20, 20, 20, 0.5);
+}
 
-    ::-webkit-scrollbar-thumb:hover {
-        background: rgba(20, 20, 20, 0.5);
-    }
+.search_results .icon16 {
+    padding-right: 10px;
+}
 
-    .search_results .icon16 {
-        padding-right: 10px;
-    }
+.search_results .item {
+    display: flex;
+    font-weight: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
-    .search_results .item {
-        display: flex;
-        font-weight: normal;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+.search.input {
+    width: 95%;
+}
 
-    .search.input {
-        width: 95%;
-    }
-
-
-/* } */
-
-
-/* @media (prefers-color-scheme: light) {
-
-    .sidebar {
-        background-color: var(--white);
-        color: var(--dark);
-        padding: 15px;
-        height: 100%;
-        overflow: auto;
-        width: 250px;
-    }
-
-    .draghandle {
-        overflow: hidden;
-        z-index: 100;
-        width: 4px;
-        height:100%;
-        right: 0;
-        bottom: 0;
-        cursor: col-resize;
-        float: right;
-    }
-
-    .draghandle:hover {
-        background-color: #3794ff !important;
-    }
-
-    #minibar {
-        margin-left: -4px;
-        padding: 8px;
-        width: 24px;
-        float:left;
-        background-color: var(--lighter);
-        border-right: 1px solid var(--dark);
-        height:110%
-    }
-
-    #minibar .bi {
-        padding: 5px;
-    }
-
-    #minibar .item  {
-        cursor: pointer;
-        padding-bottom: 5px;
-    }
-
-    #sidebar {
-        background: #252525;
-        padding: 15px;
-        width: 325px;
-        height: 100%
-    }
-
-    #sidebar .header {
-        color: var(--lightblue);
-        font-weight: bold;
-        font-size: 12px;
-    }
-
-    #sidebar .item {
-        white-space: nowrap;
-        color: var(--white);
-        padding: 5px;
-        cursor: pointer;
-    }
-
-    #sidebar .item:hover {
-        background: var(--lessdark);
-        border-radius: 5px;;
-        text-decoration: underline;
-    }
-
-    #sidebar a {
-        color: var(--dark);
-        text-decoration: none;
-    }
-
-    #sidebar a:hover {
-        text-decoration: underline;
-    }
-
-} */
-
+.workspace.active {
+    box-sizing: border-box;
+    border: 1px solid var(--highlight);
+    background: var(--border)
+}
