--- a/views/find.html
+++ b/views/find.html
@@ -18,7 +18,7 @@
         <div class="">
             <div class="">
                 <input spellcheck="false" type="checkbox" id="find_folders" name="find_folders">
-                <label for="find_folders" class="label" style="font-weight: normal;">Folders</label>
+                <label for="find_folders" class="label">Folders</label>
             </div>
         </div>
 
@@ -46,11 +46,11 @@
 
     <div class="">
         <div class="">
-            <label for="find_size" style="color:#cfcfcf" class="label">Size</label>
+            <label for="find_size" class="label">Size</label>
             <input type="text" id="find_size" class="find_input" placeholder="Size" title="Search by size. Example: > 100">
         </div>
         <div class="">
-            <label for="depth" style="color:#cfcfcf" class="label" title="Number of levels to search">Depth</label>
+            <label for="depth" class="label" title="Number of levels to search">Depth</label>
             <input type="text" id="depth" class="find_input" placeholder="depth" title="Number of levels to search" value="1">
         </div>
     </div>
