--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -87,14 +87,14 @@ html, body {
 
 #main {
     position: relative;
-    overflow-y: auto;
-    overflow-x: hidden;
+    /* overflow-y: auto; */
+    /* overflow-x: hidden; */
     /* border: 1px solid red; */
     background: var(--main);
     border-radius: 5px;
     /* padding: 10px; */
     width: 100%;
-    height: 92%;
+    height: 100%;
     /* flex: 1; */
 }
 
@@ -316,6 +316,10 @@ html, body {
 }
 
 .tab_content {
+    height: 100%;
+    padding-bottom: 75px;
+    overflow-x: hidden;
+    overflow-y: auto;
     padding: 10px;
 }
 
