--- a/views/find.html
+++ b/views/find.html
@@ -25,7 +25,7 @@
         <div class="">
             <div class="">
                 <input type="checkbox" id="find_files" name="find_files">
-                <label for="find_files" class="label" style="font-weight: normal;">Files</label>
+                <label for="find_files" class="label">Files</label>
             </div>
         </div>
     </div>
@@ -46,12 +46,12 @@
 
     <div class="">
         <div class="">
-            <label for="find_size" class="label">Size</label>
-            <input type="text" id="find_size" class="find_input" placeholder="Size" title="Search by size. Example: > 100">
-        </div>
-        <div class="">
             <label for="depth" class="label" title="Number of levels to search">Depth</label>
             <input type="text" id="depth" class="find_input" placeholder="depth" title="Number of levels to search" value="1">
+        </div>
+        <div class="">
+            <label for="find_size" class="label">Size</label>
+            <input type="text" id="find_size" class="find_input" placeholder="Size" title="Search by size. Example: > 100">
         </div>
     </div>
 
