--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -2,14 +2,12 @@
 .sidebar {
     position: relative;
     box-sizing: border-box;
-    /* border:1px solid red; */
     background-color: var(--sidebar);
     color: var(--text);
     padding-left: 5px;
     padding-right: 5px;
     height: 100%;
     width: 300px;
-
 }
 
 .sidebar .header {
@@ -189,4 +187,8 @@
     box-sizing: border-box;
     border: 1px solid var(--highlight);
     background: var(--border)
+}
+
+.workspace_item {
+    padding-left: 5px;
 }
