Added electron builder

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -614,6 +614,7 @@ progress::-webkit-progress-bar {
 }
 
 .grid5 {
+    min-height: 60px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: auto;
