--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -760,10 +760,7 @@ input[type=text]:focus {
 
 
 .loader {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    cursor: wait;
 }
 
 .loader img {
