--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -457,7 +457,7 @@ progress::-webkit-progress-bar {
 } */
 
 .svg {
-    background:rgba(250, 250, 250, .9);
+    background: var(--svg);
     filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
 }
 .card .content{
@@ -827,6 +827,8 @@ input[type=text]:focus {
         --active: #ffffff;
         --tabs: #2c2c2c;
         --button: #484848;
+
+        --svg: rgba(155, 155, 155, 0.7);
 
         --link: #4183c4;
         --highlight: #364864;
