Added disk space utility to the gio module

--- a/views/find.html
+++ b/views/find.html
@@ -17,14 +17,14 @@
     <div class="grid2">
         <div class="">
             <div class="">
-                <input spellcheck="false" type="checkbox" id="find_folders" name="find_folders">
+                <input spellcheck="false" checked="checked" type="checkbox" id="find_folders" name="find_folders">
                 <label for="find_folders" class="label">Folders</label>
             </div>
         </div>
 
         <div class="">
             <div class="">
-                <input type="checkbox" id="find_files" name="find_files">
+                <input type="checkbox" checked="checked" id="find_files" name="find_files">
                 <label for="find_files" class="label">Files</label>
             </div>
         </div>
@@ -47,7 +47,7 @@
     <div class="">
         <div class="">
             <label for="depth" class="label" title="Number of levels to search">Depth</label>
-            <input type="text" id="depth" class="find_input" placeholder="depth" title="Number of levels to search" value="1">
+            <input type="text" id="depth" class="find_input" placeholder="depth" title="Number of levels to search" value="5">
         </div>
         <div class="">
             <label for="find_size" class="label">Size</label>
