--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -408,7 +408,7 @@ progress::-webkit-progress-bar {
     display: flex;
     margin: 2px;
     padding: 2px;
-    width: 90%;
+    width: 95%;
     border-radius: 5px;
     border:none;
     background: transparent;
@@ -755,8 +755,8 @@ input[type=text]:focus {
 }
 
 .button {
-    background-color: var(--button);
-    color: var(--text);
+    /* background-color: var(--button); */
+    /* color: var(--text); */
     width: 120px;
     border: none;
     padding: 5px 5px;
@@ -770,11 +770,11 @@ input[type=text]:focus {
 }
 
 .button:active {
-    background-color: var(--button-active);
+    /* background-color: var(--button-active); */
 }
 
 .button:hover {
-    background-color: var(--button-active);
+    /* background-color: var(--button-active); */
 }
 
 .button.warning {
@@ -872,8 +872,8 @@ input[type=text]:focus {
         --text: #C0C0C0;
         --active: #ffffff;
         --tabs: #2c2c2c;
-        --button: #606366;
-        --button-active: #4b4b4b ;
+        --button: #2C3E50;
+        --button-active: #1b557c ;
 
         --svg: rgba(155, 155, 155, 0.7);
 
