--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -50,21 +50,28 @@
 }
 
 .properties_view {
-    overflow: auto;
-    height: 90%;
-    /* word-wrap: break-word; */
-    /* white-space: break-all; */
-    width: 100%;
+    /* background: var(--dialog); */
+    border:1px solid var(--border);
+    border-radius: 5px;
+    padding: 10px;
+    /* overflow: auto; */
+    /* height: 250px; */
+    margin: 20px;
+}
+
+.properties_view .tab {
+    padding-right: 10px;
 }
 
 .properties {
     width: 100%;
     border-radius: 5px;
-    background: var(--main);
-    border-bottom: 1px solid var(--border);
+    /* background: var(--dialog); */
+    /* border-top: 1px solid var(--border); */
     margin-bottom: 10px;
-    padding: 5px;
+    /* padding: 10px; */
     box-sizing: border-box;
+    line-height: 18px;
     /* grid-template-columns: repeat(2, 1fr); */
 }
 
