--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -69,8 +69,9 @@ th {
     background: var(--input);
     border: 1px solid var(--border);
     font-size: 12px;
-    height: 18px;
+    height: 20px;
     width: 100%;
+    font-weight: bold;
 }
 
 #navigation_menu .disk_space {
@@ -124,7 +125,7 @@ th {
 }
 
 .not-writable {
-    opacity: 0.4 !important;
+    opacity: 0.9 !important;
     /* background: red !important; */
 }
 
@@ -157,7 +158,7 @@ th {
 }
 
 #progress_msg {
-    color: #cfcfcf;
+    color: var(--text)
 }
 
 #quicksearch {
@@ -512,7 +513,7 @@ progress::-webkit-progress-bar {
 }
 
 .bi {
-    filter: drop-shadow(3px 3px 2px rgb(0 0 0 / 0.9));
+    /* filter: drop-shadow(3px 3px 2px rgb(0 0 0 / 0.9)); */
 }
 
 /* Handle Icon Scaling */
@@ -1026,7 +1027,7 @@ input[type=text]:focus {
     :root {
         --menu: #f7f7f7;
         --sidebar: #f7f7f7;
-        --input: #efefef;
+        --input: #d8d8d8;
         --main: #f7f7f7;
         --minibar: #ffffff;
         --border: #cfcfcf;
