--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -18,6 +18,7 @@ th {
 
 #header_menu {
     display: flex;
+    font-weight: bold;
     background: var(--menu);
     padding: 5px;
     width: 100%;
@@ -1027,7 +1028,7 @@ input[type=text]:focus {
     :root {
         --menu: #f7f7f7;
         --sidebar: #f7f7f7;
-        --input: #d8d8d8;
+        --input: #e8e8e8;
         --main: #f7f7f7;
         --minibar: #ffffff;
         --border: #cfcfcf;
