Moved last of the exec to main

--- a/views/find.html
+++ b/views/find.html
@@ -47,7 +47,7 @@
     <div class="">
         <div class="">
             <label for="depth" class="label" title="Number of levels to search">Depth</label>
-            <input type="text" id="depth" class="find_input" placeholder="depth" title="Number of levels to search" value="5">
+            <input type="text" id="depth" min="1" max="5" class="find_input" placeholder="depth" title="Number of levels to search" value="5">
         </div>
         <div class="">
             <label for="find_size" class="label">Size</label>
