Moved keyboard shortcuts. Enabled sandbox

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -29,7 +29,7 @@
 .sidebar .item:hover {
     background: var(--highlight);
     border-radius: 5px;;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 .sidebar a {
