List columns cleanup

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -863,6 +863,7 @@ input[type=text]:focus {
 
 .empty_msg {
     display: flex;
+    position: absolute;
     justify-content: center;
     align-items: center;
     height: 90%;
